docs(knowledge-base): 加厚面试/测试/架构/场景/业务模型/技术选型薄文档(Batch A/B)，新增场景设计(计费/联想/工单/导出/画像/验证码/开关/图片/直播)与业务模型(跨境/二手/汽车)深文档(Batch C)